Downloaded more test galaxies

--- a/Test_galaxies.ipynb
+++ b/Test_galaxies.ipynb
@@ -6835,28 +6835,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b9e78b30-31b3-40d8-93b4-e36a81ea47be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
-    "import pickle"
+    "import pickle\n",
+    "import util\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
+   "id": "7072e0f6-2c7b-4e62-92f7-942c42f1155f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bands = ['g', 'r', 'z', 'w1', 'w2']\n",
+    "theta_labels = ['massmet_1', 'massmet_2', 'dust2', 'tau', 'logtmax']\n",
+    "use_cols = ['g/r', 'r/z', 'r/w1', 'r/w2', 'z_phot_median', 'chisq_maggies']\n",
+    "use_cols.extend([f\"rchisq_{band}\" for band in bands])\n",
+    "use_cols.extend([theta+\"_med\" for theta in theta_labels])\n",
+    "use_cols.extend([theta+\"_sig_diff\" for theta in theta_labels])\n",
+    "seed = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "67ffcb8e-8e8a-49ec-b82a-15af4c8e938b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(use_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "385f2a6f-db54-49a0-9a80-40b0b1bb6516",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('gridsearch_model.sav', 'rb') as file:\n",
+    "with open('gridsearch_models/gridsearch_2023-02-15.sav', 'rb') as file:\n",
     "    clf = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
+   "id": "94869f9a-dead-430a-acb0-5549542fb6cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data set:\n",
+      " Lensed: 10000\n",
+      " Unlensed: 19667\n",
+      "After filtering:\n",
+      " Lensed: 9562\n",
+      " Unlensed: 17280\n"
+     ]
+    }
+   ],
+   "source": [
+    "lensed = util.read_table(\"lensed_augmented\")\n",
+    "unlensed = util.read_table(\"unlensed\")\n",
+    "print(f\"Data set:\\n Lensed: {len(lensed)}\\n Unlensed: {len(unlensed)}\")\n",
+    "\n",
+    "# Set lensed and unlensed status (just in case)\n",
+    "lensed['lensed'] = True\n",
+    "unlensed['lensed'] = False\n",
+    "\n",
+    "# Filter\n",
+    "lensed = util.clean_and_calc(lensed, filter_cols=use_cols)\n",
+    "unlensed = util.clean_and_calc(unlensed, filter_cols=use_cols)\n",
+    "\n",
+    "print(f\"After filtering:\\n Lensed: {len(lensed)}\\n Unlensed: {len(unlensed)}\")\n",
+    "\n",
+    "# Concatenate lensed and unlensed data, mix up\n",
+    "all_data = pd.concat([lensed, unlensed])\n",
+    "all_data = all_data.sample(frac=1, random_state=seed).reset_index(drop=True)\n",
+    "\n",
+    "# Split into training and testing\n",
+    "X, y = all_data[use_cols], all_data['lensed']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "57556a6c-074d-48ff-a4a5-2305ad76b2ea",
    "metadata": {},
    "outputs": [
@@ -6864,25 +6956,240 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9654696132596685\n"
+      "0.9225181598062954\n",
+      "FPR: 0.0009\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TN</th>\n",
+       "      <th>FP</th>\n",
+       "      <th>FN</th>\n",
+       "      <th>TP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3432</td>\n",
+       "      <td>3</td>\n",
+       "      <td>413</td>\n",
+       "      <td>1521</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[1969,   36],\n",
-       "       [  39,  128]])"
+       "     TN  FP   FN    TP\n",
+       "0  3432   3  413  1521"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds = clf.predict(X_test)\n",
+    "thresh = 0.02\n",
+    "\n",
+    "# preds = clf.predict(X_test)\n",
+    "preds = clf.predict_proba(X_test)[:,0] < thresh\n",
+    "\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, preds).ravel()\n",
+    "\n",
     "print(accuracy_score(y_test, preds))\n",
-    "confusion_matrix(y_test, preds)"
+    "print(f\"FPR: {fp / (fp + tn) :.4f}\")\n",
+    "pd.DataFrame({\"TN\": [tn], \"FP\": [fp], \"FN\": [fn], \"TP\": [tp]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6f49d2dc-db10-458b-b3be-f70a4955a668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chisq_maggies</th>\n",
+       "      <th>tau_med</th>\n",
+       "      <th>massmet_1_med</th>\n",
+       "      <th>logtmax_med</th>\n",
+       "      <th>tau_sig_diff</th>\n",
+       "      <th>massmet_2_med</th>\n",
+       "      <th>dust2_med</th>\n",
+       "      <th>r/z</th>\n",
+       "      <th>massmet_1_sig_diff</th>\n",
+       "      <th>dust2_sig_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>massmet_2_sig_diff</th>\n",
+       "      <th>rchisq_g</th>\n",
+       "      <th>rchisq_z</th>\n",
+       "      <th>r/w1</th>\n",
+       "      <th>rchisq_r</th>\n",
+       "      <th>logtmax_sig_diff</th>\n",
+       "      <th>z_phot_median</th>\n",
+       "      <th>rchisq_w1</th>\n",
+       "      <th>rchisq_w2</th>\n",
+       "      <th>r/w2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.176621</td>\n",
+       "      <td>0.127743</td>\n",
+       "      <td>0.123799</td>\n",
+       "      <td>0.075363</td>\n",
+       "      <td>0.067834</td>\n",
+       "      <td>0.051446</td>\n",
+       "      <td>0.049923</td>\n",
+       "      <td>0.046223</td>\n",
+       "      <td>0.044382</td>\n",
+       "      <td>0.025288</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.024464</td>\n",
+       "      <td>0.023489</td>\n",
+       "      <td>0.021089</td>\n",
+       "      <td>0.019843</td>\n",
+       "      <td>0.019235</td>\n",
+       "      <td>0.017629</td>\n",
+       "      <td>0.016366</td>\n",
+       "      <td>0.015759</td>\n",
+       "      <td>0.014543</td>\n",
+       "      <td>0.013919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chisq_maggies   tau_med  massmet_1_med  logtmax_med  tau_sig_diff  \\\n",
+       "0       0.176621  0.127743       0.123799     0.075363      0.067834   \n",
+       "\n",
+       "   massmet_2_med  dust2_med       r/z  massmet_1_sig_diff  dust2_sig_diff  \\\n",
+       "0       0.051446   0.049923  0.046223            0.044382        0.025288   \n",
+       "\n",
+       "   ...  massmet_2_sig_diff  rchisq_g  rchisq_z      r/w1  rchisq_r  \\\n",
+       "0  ...            0.024464  0.023489  0.021089  0.019843  0.019235   \n",
+       "\n",
+       "   logtmax_sig_diff  z_phot_median  rchisq_w1  rchisq_w2      r/w2  \n",
+       "0          0.017629       0.016366   0.015759   0.014543  0.013919  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = pd.DataFrame(clf.best_estimator_.feature_importances_.reshape(1, -1), columns=X_train.columns)\n",
+    "results.sort_values(by=0, axis='columns', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "89e875d2-e7fa-4725-ac1e-a2c4b9391a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = clf.predict_proba(X_test)[:,0] < .1\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "56feb3d3-02f3-4a9e-b891-201e96b9f640",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1b4f8ee4-15a7-4ea3-bc28-54369540537a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all(test == preds)"
    ]
   },
   {
@@ -6904,16 +7211,6 @@
    ],
    "source": [
     "clf.predict(one_gal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "052bda61-9f62-48ac-98ae-e491d0048273",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import date"
    ]
   },
   {
