--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -28,8 +28,13 @@
     "import util\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sqlalchemy import create_engine, Column, Table, MetaData, insert\n",
+    "from sqlalchemy.types import BIGINT, FLOAT, REAL, VARCHAR, BOOLEAN\n",
+    "\n",
     "data_dir = \"/global/cscratch1/sd/eramey16/data/dr9_training/unlensed_02_23/\"\n",
-    "random_seed = 42"
+    "seed = 42\n",
+    "\n",
+    "conn_string = 'postgresql+psycopg2://lensed_db_admin@nerscdb03.nersc.gov/lensed_db'"
    ]
   },
   {
@@ -66,24 +71,14 @@
    "execution_count": 2,
    "id": "1196d202-df1e-449a-85a2-624bb40f4b90",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_galaxies = pd.read_csv(data_dir+\"dr9_160_2_6deg.dat.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3c266f85-6877-47c0-8411-d7d06126a28d",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1554d5c1ab80>]"
+       "[<matplotlib.lines.Line2D at 0x155516a17580>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -101,12 +96,13 @@
     }
    ],
    "source": [
+    "all_galaxies = pd.read_csv(data_dir+\"dr9_160_2_6deg.dat.txt\")\n",
     "plt.plot(all_galaxies.ra, all_galaxies.dec, '.', ms=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f6a168e7-a95b-437d-bd11-4993a5e0a7b6",
    "metadata": {},
    "outputs": [
@@ -120,47 +116,81 @@
     }
    ],
    "source": [
-    "clean_galaxies = util.clean_and_calc(all_galaxies, mode='dr9')"
+    "db_cols = all_galaxies.columns\n",
+    "clean_galaxies = util.clean_and_calc(all_galaxies, mode='dr9')\n",
+    "clean_galaxies = clean_galaxies.sample(n=10000, random_state=seed).reset_index(drop=True)\n",
+    "clean_galaxies = clean_galaxies[db_cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "eb3c8696-d79d-471d-bf41-fe66c244753f",
+   "execution_count": 4,
+   "id": "7e1b862e-e12a-40ab-afc3-0363680e920e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(conn_string)\n",
+    "conn = engine.connect()\n",
+    "\n",
+    "util.bookkeeping_setup(conn, 'cosmos_160', clean_galaxies, tag='run2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fff6a75e-a593-4790-a2fb-5606326ce22d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ls_id', 'ra', 'dec', 'type', 'dered_mag_g', 'dered_mag_r',\n",
-       "       'dered_mag_z', 'dered_mag_w1', 'dered_mag_w2', 'dered_flux_g',\n",
-       "       'dered_flux_r', 'dered_flux_z', 'dered_flux_w1', 'dered_flux_w2',\n",
-       "       'snr_g', 'snr_r', 'snr_z', 'snr_w1', 'snr_w2', 'flux_ivar_g',\n",
-       "       'flux_ivar_r', 'flux_ivar_z', 'flux_ivar_w1', 'flux_ivar_w2',\n",
-       "       'dchisq_1', 'dchisq_2', 'dchisq_3', 'dchisq_4', 'dchisq_5', 'rchisq_g',\n",
-       "       'rchisq_r', 'rchisq_z', 'rchisq_w1', 'rchisq_w2', 'sersic',\n",
-       "       'sersic_ivar', 'psfsize_g', 'psfsize_r', 'psfsize_z', 'shape_r',\n",
-       "       'shape_e1', 'shape_e2', 'shape_r_ivar', 'shape_e1_ivar',\n",
-       "       'shape_e2_ivar', 'z_phot_median', 'z_phot_std', 'z_spec', 'g/r', 'r/z',\n",
-       "       'r/w1', 'r/w2', 'flux_sigma_g', 'flux_sigma_r', 'flux_sigma_z',\n",
-       "       'flux_sigma_w1', 'flux_sigma_w2', 'min_dchisq', 'sum_rchisq',\n",
-       "       'abs_mag_r'],\n",
-       "      dtype='object')"
+       "(1, 1, 'cosmos_160', 9906620138523199, datetime.datetime(2023, 3, 4, 0, 13, 16, 599006), 1, 'run2')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_galaxies.columns"
+    "conn.execute(\"SELECT * from bookkeeping\").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7a00d31b-4918-4dae-88af-3cee963c7a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9906620138523199, 161.359081536234, -3.61537897705767, 'REX', 24.5272, 23.950127, 26.303099, nan, nan, 0.154568, 0.262996, 0.030113, -2.415954, -1.585608, 5.126769, 5.626246, 0.26396, -4.243859, -1.267464, 1459.7465, 553.70496, 85.47421, 3.136003, 0.645353, 53.576904, 55.63601, 55.546356, 55.80115, 0.0, 1.023466, 0.821119, 0.966824, 0.630448, 0.882539, 1.0, 0.0, 1.396666, 1.173516, 1.312278, 0.361837, 0.0, 0.0, 80.73173, 0.0, 0.0, 0.776393, 0.586986, -99.0, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"SELECT * from cosmos_160\").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0447823b-159f-47c4-9187-a22c632024ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170295b0-a7b6-4b16-8f7e-fd2bd3572050",
+   "id": "aca3368f-221b-4492-bdf6-aeede3261e20",
    "metadata": {},
    "outputs": [],
    "source": []
